added location fetching from the database

--- a/frontend/bindetails.html
+++ b/frontend/bindetails.html
@@ -71,7 +71,7 @@
     </ul>
 
     <div class="button-container">
-        <a href="{% urls 'scan_qr' %}">
+        <a href="">
             <button>Scan Qr Code</button>
         </a>
     </div>
