qr code and verification added

--- a/frontend/bindetails.html
+++ b/frontend/bindetails.html
@@ -71,7 +71,7 @@
     </ul>
 
     <div class="button-container">
-        <a href="">
+        <a href="{% url 'scan_qr' %}?bin_type={{ item.bin_type }}">
             <button>Scan Qr Code</button>
         </a>
     </div>
